fix header not stretching to match main's height

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -77,7 +77,7 @@
 }
 
 body {
-	height: 100dvh;
+	/* height: 100dvh;git  */
 	background: radial-gradient(
 		circle,
 		rgba(2, 0, 36, 1) 0%,
